tests/baselines/reference/parserAmbiguity1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Generics/parserAmbiguity1.ts (2 errors) ====
    f(g<A, B>(7));
    ~
!!! error TS2304: Cannot find name 'f'.
      ~
!!! error TS2304: Cannot find name 'g'.